--- a/imc_calculator/imc_cal/package.json
+++ b/imc_calculator/imc_cal/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://LandGabriel.github.io/Imc_Calculator",
-  "name": "imc_cal",
+  "homepage": "https://landgabriel.github.io/Imc_Calculator/",
+  "name": "2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "server": "json-server --watch data/db.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
